# disperse_collect

./: .gitignore  Cargo.toml  README.md  run_tests.sh
api/: Cargo.toml  run_api.sh
api/src/: disperse_client.rs  error.rs  main.rs  models.rs
api/src/handlers/: collect.rs  disperse.rs  mod.rs
api/src/models/: collect.rs  disperse.rs  mod.rs  response.rs
contract/: Cargo.toml  foundry.toml  interact.sh
contract/broadcast/DisperseCollect.s.sol/31337/: run-1731343233.json
contract/script/: DisperseCollect.s.sol
contract/src/: DisperseCollect.sol  TestToken.sol  lib.rs
contract/test/: DisperseCollect.t.sol
script/: DisperseCollect.s.sol
src/: DisperseCollect.sol
test/: DisperseCollect.t.sol
